
1) Added check within replicate.sh and failover.sh for broken 2-way passwordless 
   ssh between the two HA servers. This helps avoid complex failure cases 
   introduced by server ssh administration changes.

--------------------------------------
Release notes for version 3.22

1) added APPD_UPGRADE to document upgrading the controllers in an HA pair


--------------------------------------
Release notes for version 3.23

1) the APPD_UPGRADE document was greatly expanded
2) a rare replication bug is now prevented by validating .frm and .par files
3) bg_runuser sometimes did not reliably start the watchdog

--------------------------------------
Release notes for version 3.24

1) the ssh validation is broken.  It is bypassed until fixed.

--------------------------------------
Release notes for version 3.25

1) the java installation is not in the controller tree if the platform admin
   app was used to deploy the installation.   intelligence now locates the
   java accordingly. in addition, the database error log was moved.

2) the failover.sh formerly logged the start of the secondary service in
   a confusing manner when starting the watchdog.   this is now quiet, to
   the failover.log only.

3) connected with the fixes for java platform admin. the controller is located
   with a more general regexp in pgrep that will match all controllers.

4) the MONITOR files is copied to the secondary by the setmonitor.sh script

5) NOROOT is removed by a successful run of install-init.sh

6) we now announce the HA version when unpacking the shar file

7) the watchdog.settings file is now being read for overrides of the
   default settings.

8) a long standing syntax error in the pbrun wrapper has been fixed.

KNOWN BUGS:
9) the automatic propagation of the monitoring to the machine agent 
   is not reliable.  do this manually.

--------------------------------------
Release notes for version 3.26

1) the #!/bin/bash was inadvertently removed from replicate.sh